# EEC_Final_Project

./: .gitignore  pyproject.toml
notebooks/: eddies.ipynb  initial_setup.ipynb  llc4320_data.ipynb  projector.ipynb  zero_shot_classification.ipynb
src/cutouts/: cutouts.py
src/data_proc/: data_preproc.py  eddy_dataset.py
src/dino/: dino_features.py
src/simclr/: __init__.py  simclr.py
